--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -24,12 +24,12 @@
             <li class="nav-item">
                 <a class="nav-link page-scroll" href="#about">ABOUT</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link page-scroll" href="#vision">VISION</a>
+            <!-- <li class="nav-item">
+                <a class="nav-link page-scroll" href="#vision">VISION & MISSON</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link page-scroll" href="#mission">MISSION</a>
-            </li>
+                <a class="nav-link page-scroll" href="#founder">FOUNDER</a>
+            </li> -->
             <li class="nav-item">
                 <a class="nav-link page-scroll" href="#contact">CONTACT</a>
             </li>
