--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,12 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-lg-12">
-        <h2 class="intro-heading">Vaartaalaap</h2>
+        <h2 class="intro-heading">
+          <span class="blue">Vaar</span>
+          <span class="red">taa</span>
+          <span class="teal">laap</span>
+          
+        </h2>
         <div class="p-heading p-large">
          A platform for honest conversations.
         </div>
@@ -38,6 +43,7 @@
           class="popup-youtube"
           href="https://www.youtube.com/watch?v=fLCjQJCekTs"
           data-effect="fadeIn"
+          target="_blank"
         >
           <img
             class="img-fluid"
@@ -60,6 +66,7 @@
           class="popup-youtube"
           href="https://www.youtube.com/watch?v=fLCjQJCekTs"
           data-effect="fadeIn"
+          target="_blank"
         >
           <img
             class="img-fluid"
@@ -82,6 +89,7 @@
           class="popup-youtube"
           href="https://www.youtube.com/watch?v=fLCjQJCekTs"
           data-effect="fadeIn"
+          target="_blank"
         >
           <img
             class="img-fluid"
@@ -133,7 +141,7 @@
             <div> <h1 class="heading">Download App</h1></div>
            
             <p class="p-large">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure perferendis recusandae placeat quidem sed animi voluptatibus explicabo sapiente, ad omnis earum doloribus nesciunt reprehenderit maiores, veniam dolorum ipsum ullam molestias consequuntur laborum officiis esse voluptas? Modi quam quod laudantium perferendis, eaque quisquam sequi reprehenderit voluptatem ducimus, officia voluptate, porro quis! Hic deserunt, repellat, officiis in eligendi similique consequatur mollitia accusamus magnam totam.
+             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reprehenderit, architecto. Modi voluptates aliquam corrupti assumenda. Fuga exercitationem recusandae qui vel.
               <div>
                 <a class="btn-solid-lg page-scroll" href="#your-link">APP STORE</a>
                 <a class="btn-solid-lg page-scroll" href="#your-link">PLAY STORE</a>
@@ -166,13 +174,16 @@
 
 <!-- Details 1 -->
 <!-- Details 2 -->
-<div class="basic-3">
-    <div class="second"  id="about">
+<div class="">
+    <div class="second" id="about">
+     
+    
       <div class="shape shape-semicircle-dotted">
         <img src="assets/images/bg/shape-1.png" alt="">
       </div>
       <div class="container">
-        <div class="row align-items-center justify-content-center">
+        
+        <div class="row justify-content-center">
           <!-- <div class="col-lg-6">
             <img
               class="img-fluid"
@@ -182,22 +193,27 @@
           </div> -->
           <!-- end of col -->
   
-          <div class="col-lg-8">
+          <div class="col-lg-4">
            
-              <div> <h1 class="heading u-blue">About Us</h1></div>
+              <div class="text-center"> <h1 class="heading u-blue">About Us</h1></div>
+         
               <p class="p-large">
                 The world of conversation oscillates through problems of bias, length, medium and so on. As a founder of Vaartaalaap, I have been a viewer of news, debates, interviews in various forms on digital and non-digital channels. Where conversations have meandered aimlessly at times as well as been unable to promote the voice of a common consumer.
                 
                 
               </p>
-              <img src="assets/images/about-img.png" alt="" class="about-img">
+             
+            
+           
               <p class="p-large">
                 Vaartaalaap is an Indian startup, creating digital conversational content for global audiences. As well as encouraging consumers to generate their own conversational content.  Creating voice for common people.
                
               </p>
+           
               <p class="p-large">
                 With a growth of over 15% (Compound Annual Growth Rate) in conversational content. Vaartaalaap is making a beginning as well.
               </p>
+           
               <!-- <a
                 class="btn-solid-reg popup-with-move-anim"
                 href="#details-lightbox-2"
@@ -207,13 +223,35 @@
             <!-- end of text-container -->
           </div>
           <!-- end of col -->
+          <div class="col-lg-4">
+            <div class="text-center"> <h1 class="heading">Vision</h1></div>
+            <p class="p-large">
+              Vaartaalaap wishes to be the voice of common people through its digital presence. Where subscribers and listeners get enthused with honest conversations; related to topics in vogue or of common good in an unbiased way. 
+            <br>
+              Consumers get to search, create their own as well as promote their own creativity through user generated content. The platform would also enrich and provide a compelling customer experience for all stakeholders. As part of its global consciousness, the platform will promote humane values towards all, whilst promoting empowerment and climate goals of communities globally in next 10 years.
+            </p>
+            </div>
+            <div class="col-lg-4">
+              <div class="text-center"> <h1 class="heading">Mission</h1></div>
+            
+              <p class="p-large">
+                Vaartaalaap’s mission is to provide a platform for earnest interactions with commoners and celebrities in the form of interviews, debates and discussions. Along with promoting common people to interview others in short focused videos about topics in vogue.
+              </p>
+            </div>
+
+        </div>
+        <div class="row justify-content-end">
+          <div class="col-lg-6 ">
+            <img src="assets/images/about-img.png" alt="" class="about-img">
+          </div>
+        </div>
         </div>
         <!-- end of row align-items-center -->
       </div>
       <!-- end of container -->
-    </div>
+   
 
-  <div class="second vision-section" id="vision">
+  <!-- <div class="second vision-section" id="vision">
     <div class="shape shape-semicircle-top">
       <img src="assets/images/bg/shape-4.png" alt="">
     </div>
@@ -221,56 +259,40 @@
       <img src="assets/images/bg/shape-2.png" alt="">
     </div>
     
-    <div class="container">
-      <div class="row align-items-center justify-content-center">
-        <div class="col-lg-8">
-         
-            <div> <h1 class="heading">Vision</h1></div>
+    <div class="container-fluid">
+      <div class="row  justify-content-center">
+        <div class="col-lg-2">
+            <div class="text-center"> <h1 class="heading">Vision</h1></div>
+        </div>
+        <div class="col-lg-4">
             <p class="p-large">
               Vaartaalaap wishes to be the voice of common people through its digital presence. Where subscribers and listeners get enthused with honest conversations; related to topics in vogue or of common good in an unbiased way. 
-              
+            <br>
+              Consumers get to search, create their own as well as promote their own creativity through user generated content. The platform would also enrich and provide a compelling customer experience for all stakeholders. As part of its global consciousness, the platform will promote humane values towards all, whilst promoting empowerment and climate goals of communities globally in next 10 years.
             </p>
-            <p class="p-large">Consumers get to search, create their own as well as promote their own creativity through user generated content. The platform would also enrich and provide a compelling customer experience for all stakeholders. As part of its global consciousness, the platform will promote humane values towards all, whilst promoting empowerment and climate goals of communities globally in next 10 years.
-              
-            </p>
-            <!-- <a
-              class="btn-solid-reg popup-with-move-anim"
-              href="#details-lightbox-2"
-              >LIGHTBOX</a
-            > -->
-          
-          <!-- end of text-container -->
         </div>
-        <!-- end of col -->
-        <!-- <div class="col-lg-4">
-          <img
-            class="img-fluid"
-            src="assets/images/vision.png"
-            alt="alternative"
-          />
-        </div> -->
-        <!-- end of col -->
+        <div class="col-lg-2">
+          <div class="text-center"> <h1 class="heading">Mission</h1></div>
+        </div>
+        <div class="col-lg-4">
+          <p class="p-large">
+            Vaartaalaap’s mission is to provide a platform for earnest interactions with commoners and celebrities in the form of interviews, debates and discussions. Along with promoting common people to interview others in short focused videos about topics in vogue.
+          </p>
+        </div>
       </div>
-      <!-- end of row align-items-center -->
-    </div>
-    <!-- end of container -->
-  </div>
+     
+        </div>
+      </div>
+   -->
 
 
-  <div class="second mission-section" id="mission">
+  <!-- <div class="second mission-section" id="mission">
     <div class="shape shape-box">
       <img src="assets/images/bg/shape-3.png" alt="">
     </div>
     <div class="container">
       <div class="row align-items-center justify-content-center">
-        <!-- <div class="col-lg-8">
-          <img
-            class="img-fluid"
-            src="assets/images/founder.png"
-            alt="alternative"
-          />
-        </div> -->
-        <!-- end of col -->
+      
 
         <div class="col-lg-8">
         
@@ -278,24 +300,25 @@
             <p class="p-large">
               Vaartaalaap’s mission is to provide a platform for earnest interactions with commoners and celebrities in the form of interviews, debates and discussions. Along with promoting common people to interview others in short focused videos about topics in vogue.
             </p>
-            <!-- <a
-              class="btn-solid-reg popup-with-move-anim"
-              href="#details-lightbox-2"
-              >LIGHTBOX</a
-            > -->
+           
          
-          <!-- end of text-container -->
         </div>
-        <!-- end of col -->
+       
       </div>
-      <!-- end of row align-items-center -->
+  
     </div>
-    <!-- end of container -->
-  </div>
+   
+  </div> -->
 
-  <div class="second" id="founder">
+  <div class="second founder-section" id="founder">
+    <div class="shape shape-semicircle-top">
+      <img src="assets/images/bg/shape-4.png" alt="">
+    </div>
+    <div class="shape shape-box-dotted">
+      <img src="assets/images/bg/shape-2.png" alt="">
+    </div>
     <div class="container">
-      <div> <h1 class="heading">Founder</h1></div>
+      <div class="text-center"> <h1 class="heading u-blue">Founder</h1></div>
       <div class="row founder-details align-items-center justify-content-center">
         <div class="col-lg-6">
          
@@ -372,18 +395,18 @@
           <li class="address">
             Don't hesitate to give us a call or just use the contact form below
           </li>
-          <li>
+          <!-- <li>
             <i class="fa fa-map-marker" aria-hidden="true"></i>
              22 Innovative, San Francisco,
             CA 94043, US
-          </li>
+          </li> -->
           <li>
             <i class="fa fa-phone" aria-hidden="true"></i>
-            <a class="blue" href="tel:003024630820"> +81 720 2212</a>
+            <a class="blue" href="tel:003024630820"> +91-8954693618</a>
           </li>
           <li>
             <i class="fa fa-envelope-o" aria-hidden="true"></i>
-<a class="blue" href="mailto:office@leno.com"> office@leno.com</a>
+<a class="blue" href="mailto:support@vaartaalaap.com">support@vaartaalaap.com</a>
           </li>
         </ul>
       </div>
