--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,20 +2,30 @@
     font-size: 8rem;
     font-weight: 500;
     margin-bottom: 4rem;
-    color: #101010;
+    //color: #101010;
     /* text-transform: uppercase; */
     letter-spacing: -0.4rem;
+
+    .blue{
+        color: rgb(100, 115, 246);
+    }
+    .red{
+        color: #EF9A9A;
+    }
+    .teal{
+        color: #80DEEA;
+    }
 }
 
 
 .heading{
-    font-size: 3rem;
+    font-size: 3.3rem;
     font-weight: 800;
-    color:#101010;
     letter-spacing: -0.1rem;
     position : relative;
     display: inline-block;
-    
+    color: #101010;
+   
 }
 
 
@@ -40,6 +50,9 @@
 .mission-section{
     background-color: #ffbdb44b;
 }
+.founder-section{
+    background-color: #ffbdb44b;
+}
 .founder-details{
    margin-top: 4rem;
     text-align: left;
@@ -48,8 +61,6 @@
     color: #000;
     font-size: 1rem;
     }
-
-   
 }
 .founder-img-wrap{
     position: relative;
@@ -65,7 +76,8 @@
 }
 .second{
     position: relative;
-    padding: 6rem 0 2rem;
+    padding: 6rem 0 5rem;
+    text-align: left;
 }
 .see-btn{
     a{
