--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -29,7 +29,7 @@
                         <h4>Social Media</h4>
                         <span class="fa-stack">
                             <a href="#your-link">
-                                <i class="fa fa-facebook" aria-hidden="true"></i>
+                                <i class="fa fa-linkedin" aria-hidden="true"></i>
 
                             </a>
                         </span>
@@ -41,16 +41,18 @@
                         </span>
                         <span class="fa-stack">
                             <a href="#your-link">
-                                <i class="fa fa-instagram" aria-hidden="true"></i>
+                                <i class="fa fa-facebook" aria-hidden="true"></i>
 
                             </a>
                         </span>
+                       
                         <span class="fa-stack">
                             <a href="#your-link">
-                                <i class="fa fa-linkedin" aria-hidden="true"></i>
+                                <i class="fa fa-youtube" aria-hidden="true"></i>
 
                             </a>
                         </span>
+                       
                         
                     </div> 
                 </div> <!-- end of col -->
