--- a/src/styles.scss
+++ b/src/styles.scss
@@ -790,9 +790,9 @@ input[type='checkbox'] {
 }
 
  .p-large {
-	margin: 2rem 0;
+	margin: 0 0 1rem;
     color: #313131;
-    font-size: 1.1rem;
+    font-size: 1rem;
     font-weight: 600;
     line-height: 1.8;
 }
