--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -28,26 +28,26 @@
                     <div class="footer-col last">
                         <h4>Social Media</h4>
                         <span class="fa-stack">
-                            <a href="#your-link">
+                            <a href="#your-link" target="_blank">
                                 <i class="fa fa-linkedin" aria-hidden="true"></i>
 
                             </a>
                         </span>
                         <span class="fa-stack">
-                            <a href="#your-link">
+                            <a href="https://twitter.com/Vaartaalaap1" target="_blank">
                                 <i class="fa fa-twitter" aria-hidden="true"></i>
 
                             </a>
                         </span>
                         <span class="fa-stack">
-                            <a href="#your-link">
+                            <a href="#your-link" target="_blank">
                                 <i class="fa fa-facebook" aria-hidden="true"></i>
 
                             </a>
                         </span>
                        
                         <span class="fa-stack">
-                            <a href="#your-link">
+                            <a href="https://www.youtube.com/channel/UCsmOLn1Q6awYR7xcD4z09HA" target="_blank">
                                 <i class="fa fa-youtube" aria-hidden="true"></i>
 
                             </a>
