--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,22 +1,20 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top">
-    <!-- Text Logo - Use this if you don't have a graphic logo -->
-    <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Leno</a> -->
-
+  
     <!-- Image Logo -->
-    <a class="navbar-brand logo-image" href="index.html"><img src="assets/images/logo.png" alt="alternative"></a> 
+    <a class="navbar-brand logo-image" routerLink="/home"><img src="assets/images/logo-full.png" alt="alternative"></a> 
     
     <!-- Mobile Menu Toggle Button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-awesome fas fa-bars"></span>
-        <span class="navbar-toggler-awesome fas fa-times"></span>
+        <span class="navbar-toggler-awesome fa fa-bars"></span>
+        <span class="navbar-toggler-awesome fa fa-times"></span>
     </button>
     <!-- end of mobile menu toggle button -->
 
     <div class="collapse navbar-collapse" id="navbarsExampleDefault">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link page-scroll" href="#preview">HOME <span class="sr-only">(current)</span></a>
+                <a class="nav-link page-scroll" href="#preview">HOME</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link page-scroll" href="#header">DOWNLOAD APP</a>
@@ -24,30 +22,11 @@
             <li class="nav-item">
                 <a class="nav-link page-scroll" href="#about">ABOUT</a>
             </li>
-            <!-- <li class="nav-item">
-                <a class="nav-link page-scroll" href="#vision">VISION & MISSON</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link page-scroll" href="#founder">FOUNDER</a>
-            </li> -->
             <li class="nav-item">
                 <a class="nav-link page-scroll" href="#contact">CONTACT</a>
             </li>
         </ul>
-        <!-- <span class="nav-item social-icons">
-            <span class="fa-stack">
-                <a href="#your-link">
-                    <i class="fas fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-facebook-f fa-stack-1x"></i>
-                </a>
-            </span>
-            <span class="fa-stack">
-                <a href="#your-link">
-                    <i class="fas fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-twitter fa-stack-1x"></i>
-                </a>
-            </span>
-        </span> -->
+        
     </div>
 </nav> <!-- end of navbar -->
 <!-- end of navigation -->
