--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,13 +1,13 @@
 .intro-heading{
-    font-size: 8rem;
+    font-size: 6rem;
     font-weight: 500;
     margin-bottom: 4rem;
     //color: #101010;
     /* text-transform: uppercase; */
-    letter-spacing: -0.4rem;
+    letter-spacing: -0.3rem;
 
     .blue{
-        color: rgb(100, 115, 246);
+        color: #727ec9;
     }
     .red{
         color: #EF9A9A;
@@ -17,15 +17,33 @@
     }
 }
 
+.download-section{
+    margin: 2rem 0;
+    background: #727ec924;
+
+    .download-text{
+        padding: 4rem 0;
+    }
+}
+.head-text{
+    font-size: 1.5rem;
+    font-weight: 700;
+    opacity: 0.8;
+}
+
+.about-section{
+    background-image: linear-gradient(to bottom, white, #ffece973 , #ffece9);
+}
 
 .heading{
-    font-size: 3.3rem;
+    font-size: 2.5rem;
     font-weight: 800;
     letter-spacing: -0.1rem;
     position : relative;
     display: inline-block;
     color: #101010;
-   
+    z-index: 10;
+   margin-bottom: 1.5rem;
 }
 
 
@@ -37,15 +55,25 @@
     height: 1.2rem;
     z-index: -1;
     width: 100%;
-    opacity: 0.4;
-    background-color: #ffbdb4;
+    background-color: #ef9a9a;
+}
+.u-blue::after{
+    background-color: #a0a8dc;
 }
 .about-img{
-    max-width: 600px;
+    position: absolute;
+    bottom: 0;
+    right: 3vw;
+    max-width:400px;
+    width: 50%;
 }
 .vision-section{
     background-color: #b0ccff2f;
    
+}
+.d-img{
+    position: relative;
+    z-index: 10;
 }
 .mission-section{
     background-color: #ffbdb44b;
@@ -54,20 +82,20 @@
     background-color: #ffbdb44b;
 }
 .founder-details{
-   margin-top: 4rem;
+   margin-top: 2rem;
     text-align: left;
-    ul{
+    
         list-style: square;
     color: #000;
     font-size: 1rem;
-    }
+    
 }
 .founder-img-wrap{
     position: relative;
 }
 .founder-img{
     max-width: 400px;
-    width: 80%;
+    width: 65%;
     box-shadow: 0px 5px 20px 8px #00000026;
     margin-left: auto;
     border-radius: 10px;
@@ -76,7 +104,7 @@
 }
 .second{
     position: relative;
-    padding: 6rem 0 5rem;
+    padding: 4rem 0;
     text-align: left;
 }
 .see-btn{
@@ -85,25 +113,17 @@
         margin: 2rem 0;
     }
 }
-.u-blue::after{
-    background-color: #b0cbff;
-}
+
 
 .video-wrap{
     position: relative;
 }
 
-.vb{
-    position: absolute;
-    img{
-        width: 200px;
-    }
-}
+
 .ib{
     position: absolute;
-    img{
-        width: 100px;
-    }
+    width: 20%;
+ 
 }
 .ib-1{
     top: 0px;
@@ -113,28 +133,36 @@
     bottom: 0px;
     right: 0px;
 }
+.vb{
+    position: absolute;
+    img{
+        width: 12vw;
+    }
+}
 .vb-1{
     top: 0;
     left: 0;
 }
 .vb-2{
     top: 0;
-    right: -70px;
+    left: auto;
+    right: 0px;
     img{
-        width: 250px;
+        width: 10vw;
     }
 }
 
 .vb-3{
-    bottom: -100px;
+    bottom: 0;
+    left: auto;
     right: 0px;
     img{
-        width: 250px;
+        width: 15vw;
     }
 }
 
 .vb-4{
-    bottom: -100px;
+    bottom: 0px;
     left: 0px;
    
 }
@@ -144,7 +172,7 @@
 .shape{
     position: absolute;
     img{
-        width: 300px;
+        width: 10vw;
     }
 }
 .shape-1{
@@ -157,48 +185,43 @@
     right:2%;
 }
 .shape-semicircle-top{
-    top: -150px;
-    right: 0;
+    top: -18vh;
+    left: 0;
 
     img{
-        height: 300px;
+        height: 36vh;
         width: auto;
         opacity: 0.9;
+        transform: rotate(180deg);
     }
 }
 .shape-semicircle-dotted{
-    top: -7%;
+    top: -18vh;
     left: -1%;
     img{
-        height: 300px;
+        height: 35vh;
         width: auto;
         opacity: 0.6;
     }
 }
 .shape-box-dotted{
-    bottom: -90px;
-    left: 0%;
+    bottom: -12vh;
+    right: 0%;
     img{
-        height: 180px;
+        height: 24vh;
         width: auto;
     }
 }
 .line-1{
     bottom: 0;
     left: 0;
-    img
-    {
-        width: 100px;
-    }
+    width: 20%;
 }
 
 .line-2{
     top: 0;
     right: 0;
-    img
-    {
-        width: 100px;
-    }
+    width: 20%;
 }
 
 .shape-box{
@@ -208,5 +231,71 @@
     img{
         height: 200px;
         width: auto;
+    }
+}
+
+@media all and (max-width:576px){
+    .intro-heading {
+        font-size: 4rem;
+        margin-bottom: 2rem;
+        letter-spacing: -0.2rem;
+    }
+    .heading{
+        margin-top:3rem;
+    }
+    .head-text{
+        font-size: 1rem;
+        font-weight: 700;
+        opacity: 0.8;
+    }
+    .vb{
+        
+        img{
+            width: 20vw;
+        }
+    }
+    .vb-2{
+       
+        img{
+            width: 15vw;
+        }
+    }
+    
+    .vb-3{
+       
+        img{
+            width: 20vw;
+        }
+    }
+    .d-wrap{
+        text-align: center;
+    }
+    .btn-wrap{
+        justify-content: space-between;
+    }
+    .about-img{
+        position: relative; 
+        width: 100%;
+       max-width: 100%;
+    }
+    .shape-semicircle-top {
+        top: -9vh;
+        left: 0;
+        img{
+            height: 25vh;
+        }
+    }
+    .shape-box-dotted{
+        bottom:-9vh;
+        img {
+            height: 18vh;
+            width: auto;
+        }
+    } 
+    .d-img{
+       display:none;
+    }
+    .founder-img{
+       margin-top: 2rem;
     }
 }
