--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,6 +49,7 @@ body,
 html {
     width: 100%;
 	height: 100%;
+	font-size: 16px;
 }
 
 body, p {
@@ -391,8 +392,9 @@ input[type='checkbox'] {
 }
 
 .form-control-submit-button:hover {
-	background-color: transparent;
-	color: #EF9A9A;
+	background-color: #3d528a;
+	border: 1px solid #3d528a;
+	color: #fff;
 }
 
 /* Form Success And Error Message Formatting */
@@ -644,14 +646,14 @@ input[type='checkbox'] {
 /*     03. Navigation     */
 /**************************/
 .navbar-custom {
-	background-color: #4633af;
+	background-color: #fff;
 	box-shadow: 0 0.0625rem 0.375rem 0 rgba(0, 0, 0, 0.1);
 	font: 700 0.75rem/2rem 'Montserrat', sans-serif;
 	transition: all 0.2s ease;
 }
 
 .navbar-custom .navbar-brand.logo-image img {
-    width: 80px;
+    width: 110px;
 	margin-bottom: 1px;
 	-webkit-backface-visibility: hidden;
 	transition: all 0.2s ease-in-out;
@@ -741,23 +743,24 @@ input[type='checkbox'] {
 
 .navbar-custom .navbar-toggler {
 	border: none;
+	outline: none;
 	color: #fff;
 	font-size: 2rem;
 }
 
-.navbar-custom button[aria-expanded='false'] .navbar-toggler-awesome.fas.fa-times{
+.navbar-custom button[aria-expanded='false'] .navbar-toggler-awesome.fa.fa-times{
 	display: none;
 }
 
-.navbar-custom button[aria-expanded='false'] .navbar-toggler-awesome.fas.fa-bars{
+.navbar-custom button[aria-expanded='false'] .navbar-toggler-awesome.fa.fa-bars{
 	display: inline-block;
 }
 
-.navbar-custom button[aria-expanded='true'] .navbar-toggler-awesome.fas.fa-bars{
+.navbar-custom button[aria-expanded='true'] .navbar-toggler-awesome.fa.fa-bars{
 	display: none;
 }
 
-.navbar-custom button[aria-expanded='true'] .navbar-toggler-awesome.fas.fa-times{
+.navbar-custom button[aria-expanded='true'] .navbar-toggler-awesome.fa.fa-times{
 	display: inline-block;
 	margin-right: 0.125rem;
 }
@@ -766,10 +769,6 @@ input[type='checkbox'] {
 /*********************/
 /*    04. Header     */
 /*********************/
-.header {
-	// background: linear-gradient(-45deg, #dbdefc, #c9dffd);
-	// background-size: cover;
-}
 
 .header .header-content {
 	padding-top: 8.5rem;
@@ -792,7 +791,7 @@ input[type='checkbox'] {
  .p-large {
 	margin: 0 0 1rem;
     color: #313131;
-    font-size: 1rem;
+    font-size: 0.9rem;
     font-weight: 600;
     line-height: 1.8;
 }
@@ -1362,8 +1361,8 @@ input[type='checkbox'] {
 /*     13. Contact     */
 /***********************/
 .form {
-	padding-top: 6.25rem;
-	padding-bottom: 5.625rem;
+	padding-top: 3rem;
+	padding-bottom: 3rem;
 	background: url(assets/images/contact-background.jpg) center bottom no-repeat;
 	background-size: cover; 
 }
@@ -1555,10 +1554,30 @@ a:hover.back-to-top {
 	background-color: #f9fafc;
 }
 
+	/* Contact */
+	.form .list-unstyled li {
+		display: inline-block;
+		margin-right: 0.5rem;
+		margin-left: 0.5rem;
+    color: #3d528a;
+	font-weight: 600;
+	
+	a{
+		color: #3d528a;
+	}
+	}
 
 /*****************************/
 /*     18. Media Queries     */
 /*****************************/	
+@media all and (max-width:576px){
+	html{
+		font-size:14px;
+	}
+	.navbar-custom .navbar-brand.logo-image img {
+		width: 50px;
+	}
+}
 /* Min-width width 768px */
 @media (min-width: 768px) {
 	
@@ -1612,8 +1631,6 @@ a:hover.back-to-top {
 		color: #fff;
 	}
 
-
-	
 	.navbar-custom.top-nav-collapse .nav-item .nav-link:hover,
 	.navbar-custom.top-nav-collapse .nav-item .nav-link.active {
 		color: #EF9A9A;
@@ -1732,21 +1749,10 @@ a:hover.back-to-top {
 	/* end of screenshots */
 
 
-	/* Contact */
-	.form .list-unstyled li {
-		display: inline-block;
-		margin-right: 0.5rem;
-		margin-left: 0.5rem;
-    color: #3d528a;
-	font-weight: 600;
-	
-	a{
-		color: #3d528a;
-	}
-	}
+
 
 	.contact-head{
-		color: #3d528a;
+		color: #000;
 	}
 
 	.form .list-unstyled .address {
@@ -1817,11 +1823,7 @@ a:hover.back-to-top {
 	/* end of general styles */
 
 
-	/* Header */
-	.header .header-content {
-		padding-top: 6rem;
-		text-align: left;
-	}
+	
 
 	.header .text-container {
 		margin-top: 4rem;
@@ -2007,7 +2009,11 @@ a:hover.back-to-top {
 	}
 
 	.header .image-container {
-		margin-left: 3rem;
+		text-align: center;
+
+		img{
+			width: 75%;
+		}
 	}
 	/* end of header */
 
