--- a/src/app/all-videos/all-videos.component.html
+++ b/src/app/all-videos/all-videos.component.html
@@ -1,1 +1,103 @@
-<p>all-videos works!</p>
+<section class="all-videos">
+    <div class="container">
+        <h1 class="intro-heading">
+            Videos From Vaartaalaap
+        </h1>
+    </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-md-6">
+                    <a class="popup-youtube"
+                    href="https://www.youtube.com/watch?v=Mn53A8ryXWU">
+                        <div class="video-card">
+                            <div class="video-img">
+                                <div class="video-overlay">
+                                    <i class="fa fa-play-circle" aria-hidden="true"></i>
+                                </div>
+                                <img src="https://images.pexels.com/photos/3756659/pexels-photo-3756659.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+                            </div>
+                            <div class="video-caption">
+                                <h5 class="video-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, culpa?
+                                </h5>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <a class="popup-youtube"
+                    href="https://www.youtube.com/watch?v=Mn53A8ryXWU">
+                        <div class="video-card">
+                            <div class="video-img">
+                                <div class="video-overlay">
+                                    <i class="fa fa-play-circle" aria-hidden="true"></i>
+                                </div>
+                                <img src="https://images.pexels.com/photos/3756659/pexels-photo-3756659.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+                            </div>
+                            <div class="video-caption">
+                                <h5 class="video-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, culpa?
+                                </h5>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <a class="popup-youtube"
+                    href="https://www.youtube.com/watch?v=Mn53A8ryXWU">
+                        <div class="video-card">
+                            <div class="video-img">
+                                <div class="video-overlay">
+                                    <i class="fa fa-play-circle" aria-hidden="true"></i>
+                                </div>
+                                <img src="https://images.pexels.com/photos/3756659/pexels-photo-3756659.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+                            </div>
+                            <div class="video-caption">
+                                <h5 class="video-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, culpa?
+                                </h5>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <a class="popup-youtube"
+                    href="https://www.youtube.com/watch?v=Mn53A8ryXWU">
+                        <div class="video-card">
+                            <div class="video-img">
+                                <div class="video-overlay">
+                                    <i class="fa fa-play-circle" aria-hidden="true"></i>
+                                </div>
+                                <img src="https://images.pexels.com/photos/3756659/pexels-photo-3756659.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+                            </div>
+                            <div class="video-caption">
+                                <h5 class="video-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, culpa?
+                                </h5>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-md-6">
+                    <a class="popup-youtube"
+                    href="https://www.youtube.com/watch?v=Mn53A8ryXWU">
+                        <div class="video-card">
+                            <div class="video-img">
+                                <div class="video-overlay">
+                                    <i class="fa fa-play-circle" aria-hidden="true"></i>
+                                </div>
+                                <img src="https://images.pexels.com/photos/3756659/pexels-photo-3756659.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="">
+                            </div>
+                            <div class="video-caption">
+                                <h5 class="video-text">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, culpa?
+                                </h5>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+            </div>
+           
+        </div>
+   
+</section>
