--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,11 +1,15 @@
     <!-- Footer -->
     <div class="footer">
         <div class="container">
-            <div class="row">
+            <div class="row align-items-center">
                 <div class="col-md-4">
                     <div class="footer-col">
-                        <h4>About Vaartaalaap</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam hic blanditiis eius cupiditate error aut ex sunt voluptatum eum incidunt.</p>
+                       <div>
+                        <img src="assets/images/footer-logo.png" alt="" class="footer-logo">
+                       </div>
+                        
+                        <!-- <h4>About Vaartaalaap</h4> -->
+                        <h6>A platform for honest conversations.</h6>
                     </div>
                 </div> <!-- end of col -->
                 <div class="col-md-4">
