--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-md navbar-dark navbar-custom fixed-top">
   
     <!-- Image Logo -->
-    <a class="navbar-brand logo-image" routerLink="/home"><img src="assets/images/logo-full.png" alt="alternative"></a> 
+    <a class="navbar-brand logo-image" routerLink="/home"><img src="assets/images/logo.jpg" alt="alternative"></a> 
     
     <!-- Mobile Menu Toggle Button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
