--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -33,9 +33,9 @@
             <div class="video-wrapper">
               <a
                 class="popup-youtube"
-                href="https://www.youtube.com/watch?v=fLCjQJCekTs"
+                href="https://www.youtube.com/watch?v=OW-TasHedKA"
                 data-effect="fadeIn"
-                target="_blank"
+                
               >
                 <img
                   class="img-fluid"
@@ -56,9 +56,9 @@
             <div class="video-wrapper">
               <a
                 class="popup-youtube"
-                href="https://www.youtube.com/watch?v=fLCjQJCekTs"
+                href="https://www.youtube.com/watch?v=OW-TasHedKA"
                 data-effect="fadeIn"
-                target="_blank"
+                
               >
                 <img
                   class="img-fluid"
@@ -79,9 +79,9 @@
             <div class="video-wrapper">
               <a
                 class="popup-youtube"
-                href="https://www.youtube.com/watch?v=fLCjQJCekTs"
+                href="https://www.youtube.com/watch?v=Mn53A8ryXWU"
                 data-effect="fadeIn"
-                target="_blank"
+                
               >
                 <img
                   class="img-fluid"
@@ -103,7 +103,7 @@
     </div>
 
     <div class="text-center see-btn">
-      <a class="btn-solid-lg page-scroll" href="#your-link">See all videos</a>
+      <a class="btn-solid-lg" routerLink="/videos">See all videos</a>
     </div>
   </div>
 </section>
@@ -121,7 +121,7 @@
       <div class="row align-items-center">
         <div class="col-lg-6">
          <div class="download-text">
-          <div class="d-wrap"><h1 class="heading">Download App</h1></div>
+          <div class="d-wrap"><h1 class="heading heading-red">Download App</h1></div>
           <p class="p-large">
             Lorem ipsum, dolor sit amet consectetur adipisicing elit.
             Reprehenderit, architecto. Modi voluptates aliquam corrupti
@@ -129,10 +129,10 @@
           </p>
 
           <div class="d-flex btn-wrap">
-            <a class="btn-solid-lg page-scroll" href="#your-link"
+            <a class="btn-solid-lg page-scroll btn-blue" href="#your-link"
             >APP STORE</a
           >
-          <a class="btn-solid-lg page-scroll" href="#your-link"
+          <a class="btn-solid-lg page-scroll btn-blue" href="#your-link"
             >PLAY STORE</a
           >
           </div>
@@ -157,66 +157,6 @@
 
 </section>
 
-<section id="about" class="second about-section" >
-  <div class="shape shape-semicircle-dotted">
-    <img src="assets/images/bg/shape-1.png" alt="" />
-  </div>
- 
-  <div class="container">
-    <div class="row justify-content-center">
-      <div class="col-lg-4">
-        <div class="text-center"><h1 class="heading u-blue">About Us</h1></div>
-        <p class="p-large">
-          The world of conversation oscillates through problems of bias, length,
-          medium and so on. As a founder of Vaartaalaap, I have been a viewer of
-          news, debates, interviews in various forms on digital and non-digital
-          channels. Where conversations have meandered aimlessly at times as
-          well as been unable to promote the voice of a common consumer.
-        </p>
-        <p class="p-large">
-          Vaartaalaap is an Indian startup, creating digital conversational
-          content for global audiences. As well as encouraging consumers to
-          generate their own conversational content. Creating voice for common
-          people.
-        </p>
-        <p class="p-large">
-          With a growth of over 15% (Compound Annual Growth Rate) in
-          conversational content. Vaartaalaap is making a beginning as well.
-        </p>
-      </div>
-
-      <div class="col-lg-4">
-        <div class="text-center"><h1 class="heading">Vision</h1></div>
-        <p class="p-large">
-          Vaartaalaap wishes to be the voice of common people through its
-          digital presence. Where subscribers and listeners get enthused with
-          honest conversations; related to topics in vogue or of common good in
-          an unbiased way.
-        </p>
-        <p class="p-large">
-          Consumers get to search, create their own as well as promote their own
-          creativity through user generated content. The platform would also
-          enrich and provide a compelling customer experience for all
-          stakeholders. As part of its global consciousness, the platform will
-          promote humane values towards all, whilst promoting empowerment and
-          climate goals of communities globally in next 10 years.
-        </p>
-      </div>
-
-      <div class="col-lg-4">
-        <div class="text-center"><h1 class="heading u-blue">Mission</h1></div>
-        <p class="p-large">
-          Vaartaalaap’s mission is to provide a platform for earnest
-          interactions with commoners and celebrities in the form of interviews,
-          debates and discussions. Along with promoting common people to
-          interview others in short focused videos about topics in vogue.
-        </p>
-      </div>
-    </div>
-    <img src="assets/images/about-img.png" alt="" class="about-img" />
-  </div>
-</section>
-
 <section id="founder" class="second founder-section" >
   <div class="shape shape-semicircle-top">
     <img src="assets/images/bg/shape-4.png" alt="" />
@@ -225,7 +165,7 @@
     <img src="assets/images/bg/shape-2.png" alt="" />
   </div>
   <div class="container">
-    <div class="text-center"><h1 class="heading">Founder</h1></div>
+    <div class="text-center"><h1 class="heading heading-blue">Founder</h1></div>
     <div class="row align-items-center justify-content-center">
       <div class="col-lg-6">
         <ul class="founder-details">
@@ -287,12 +227,75 @@
   <!-- end of container -->
 </section>
 
+<section id="about" class="second about-section" >
+ 
+ 
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-lg-4">
+        <div class="text-center"><h1 class="heading heading-blue">About Us</h1></div>
+        <p class="p-large">
+          The world of conversation oscillates through problems of bias, length,
+          medium and so on. As a founder of Vaartaalaap, I have been a viewer of
+          news, debates, interviews in various forms on digital and non-digital
+          channels. Where conversations have meandered aimlessly at times as
+          well as been unable to promote the voice of a common consumer.
+        </p>
+        <p class="p-large">
+          Vaartaalaap is an Indian startup, creating digital conversational
+          content for global audiences. As well as encouraging consumers to
+          generate their own conversational content. Creating voice for common
+          people.
+        </p>
+        <p class="p-large">
+          With a growth of over 15% (Compound Annual Growth Rate) in
+          conversational content. Vaartaalaap is making a beginning as well.
+        </p>
+      </div>
+
+      <div class="col-lg-4">
+        <div class="text-center"><h1 class="heading heading-red">Vision</h1></div>
+        <p class="p-large">
+          Vaartaalaap wishes to be the voice of common people through its
+          digital presence. Where subscribers and listeners get enthused with
+          honest conversations; related to topics in vogue or of common good in
+          an unbiased way.
+        </p>
+        <p class="p-large">
+          Consumers get to search, create their own as well as promote their own
+          creativity through user generated content. The platform would also
+          enrich and provide a compelling customer experience for all
+          stakeholders. As part of its global consciousness, the platform will
+          promote humane values towards all, whilst promoting empowerment and
+          climate goals of communities globally in next 10 years.
+        </p>
+      </div>
+
+      <div class="col-lg-4">
+        <div class="text-center"><h1 class="heading heading-teal">Mission</h1></div>
+        <p class="p-large">
+          Vaartaalaap’s mission is to provide a platform for earnest
+          interactions with commoners and celebrities in the form of interviews,
+          debates and discussions. Along with promoting common people to
+          interview others in short focused videos about topics in vogue.
+        </p>
+      </div>
+    </div>
+    <img src="assets/images/about-img.png" alt="" class="about-img" />
+  </div>
+</section>
+
+
+
 <!-- Contact -->
 <section id="contact" class="form">
+  <div class="shape shape-semicircle-dotted">
+    <img src="assets/images/bg/shape-1.png" alt="" />
+  </div>
   <div class="container">
     <div class="row align-items-center">
       <div class="col-lg-12">
-        <div class="text-center"><h1 class="heading">Contact</h1></div>
+        <div class="text-center"><h1 class="heading heading-red">Contact</h1></div>
         <ul class="list-unstyled li-space-lg">
           <li class="address">
             Don't hesitate to give us a call or just use the contact form below
