--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,20 +5,21 @@
     //color: #101010;
     /* text-transform: uppercase; */
     letter-spacing: -0.3rem;
+    color: #727ec9;
 
-    .blue{
-        color: #727ec9;
-    }
-    .red{
-        color: #EF9A9A;
-    }
-    .teal{
-        color: #80DEEA;
-    }
+    // .blue{
+    //     color: #727ec9;
+    // }
+    // .red{
+    //     color: #EF9A9A;
+    // }
+    // .teal{
+    //     color: #80DEEA;
+    // }
 }
 
 .download-section{
-    margin: 2rem 0;
+    padding: 3rem 0;
     background: #727ec924;
 
     .download-text{
@@ -32,7 +33,8 @@
 }
 
 .about-section{
-    background-image: linear-gradient(to bottom, white, #ffece973 , #ffece9);
+   // background-image: linear-gradient(to bottom, white, #ffece973 , #ffece9);
+   background-color: #ffece9;
 }
 
 .heading{
@@ -41,11 +43,9 @@
     letter-spacing: -0.1rem;
     position : relative;
     display: inline-block;
-    color: #101010;
     z-index: 10;
-   margin-bottom: 1.5rem;
+     margin-bottom: 1.5rem;
 }
-
 
 .heading::after{
     content: "";
@@ -55,10 +55,28 @@
     height: 1.2rem;
     z-index: -1;
     width: 100%;
-    background-color: #ef9a9a;
 }
-.u-blue::after{
-    background-color: #a0a8dc;
+.heading-red{
+    color: #EF9A9A;
+}
+.heading-red::after{
+    background-color: #727ec938;
+}
+
+.heading-blue{
+    color: #727ec9;
+}
+.heading-blue::after{
+    background-color: rgba(239, 154, 154, 0.473);
+}
+.heading-teal{
+    color: #80DEEA;
+}
+
+.about-section {
+    .heading-red::after,.heading-blue::after{
+        background: transparent;
+    }
 }
 .about-img{
     position: absolute;
@@ -79,7 +97,7 @@
     background-color: #ffbdb44b;
 }
 .founder-section{
-    background-color: #ffbdb44b;
+    background-image: linear-gradient(to bottom, #fff, #ffece973 , #ffece9);
 }
 .founder-details{
    margin-top: 2rem;
@@ -206,6 +224,7 @@
 }
 .shape-box-dotted{
     bottom: -12vh;
+    z-index: 10;
     right: 0%;
     img{
         height: 24vh;
