--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -5,7 +5,7 @@
     //color: #101010;
     /* text-transform: uppercase; */
     letter-spacing: -0.3rem;
-    color: #727ec9;
+    color: #3d8dd2;
 
     // .blue{
     //     color: #727ec9;
