--- a/src/app/all-videos/all-videos.component.html
+++ b/src/app/all-videos/all-videos.component.html
@@ -1,8 +1,23 @@
 <section class="all-videos">
+    <div class="vb vb-1">
+        <img src="assets/images/bg/block-1.png" alt="" />
+      </div>
+      <div class="vb vb-2">
+        <img src="assets/images/bg/block-2.png" alt="" />
+      </div>
+      <div class="vb vb-3">
+        <img src="assets/images/bg/block-3.png" alt="" />
+      </div>
+      <div class="vb vb-4">
+        <img src="assets/images/bg/block-2.png" alt="" />
+      </div>
     <div class="container">
-        <h1 class="intro-heading">
-            Videos From Vaartaalaap
-        </h1>
+        <div class="text-center">
+            <h1 class="heading heading-red">
+                Videos From Vaartaalaap
+            </h1>
+        </div>
+       
     </div>
         <div class="container">
             <div class="row">
